packages/shared-skills/skills/programming/fixtures/java/no-excuse/fail/setter/src/main/java/sample/member/domain/SetterCase.java
package sample.member.domain;

class SetterCase {
    private String name;

    public void setName(String name) {
        this.name = name;
    }
}
